--- a/README.Rmd
+++ b/README.Rmd
@@ -58,7 +58,12 @@ This repository is still in development. It will contain data and code to a geos
 The mexican_ports.csv data set is obtained from a file in the ‘data’ folder titled ‘catastro.pdf’ which contains information on Mexico ports from the Mexican Secretaria De Comunicaciones y Transportes. 
 
 ### Column specifications
+
+- `municipality_id`:
+- `municipality_name`:
 - `port_id`: numeric. 5-digit numeric code that acts as a unique identifier for each port.
+- `port_name`:
+- `landing_site_id`:
 
-
+### Using the data
 
