--- a/README.Rmd
+++ b/README.Rmd
@@ -56,8 +56,9 @@ This repository is still in development. It will contain data and code to a geos
 
 
 ### How the data are built
-	The information in mexican_ports.csv is obtained from a file in the folders 'data' -> 'raw' titled catastro.pdf. catastro.pdf contains information on Mexico ports from the Mexican Secretaria de Comunicaciones y Transportes and the Departamento de Catastro, Instalaciones y Recintos. This information was extracted by copying and pasting it, and later reorganized into new columns. 
-	The information in mex_large_scale_landing_ports.csv is from ____ and was extracted through by _____. 
+
+The information in mexican_ports.csv is obtained from a file in the folders 'data' -> 'raw' titled catastro.pdf. catastro.pdf contains information on Mexico ports from the Mexican Secretaria de Comunicaciones y Transportes and the Departamento de Catastro, Instalaciones y Recintos. This information was extracted by copying and pasting it, and later reorganized into new columns. 
+The information in mex_large_scale_landing_ports.csv is from Mexico’s fisheries production data and was extracted through copy and pasting. 
 
 The inputs for 'port_id' are labeled as 'Clv. del puerto' in catastro.pdf. 
 The inputs for 'municipality_code' (renamed 'municipality_id' in final mex_ports cleaned data) and 'municipality_name' are found labeled together under 'Municipio' in catastro.pdf
@@ -66,13 +67,12 @@ The inputs for 'longitude' and 'latitude' are labeled as 'Longitud' and 'Latutid
 
 The inputs for  ‘landing_site_id’ are originally labeled as ___ in ___
 
-	mex_ports_dictionary.csv was created to find the overlap of ports between these two files. This file connected the ports that contained the same or very similar names (ex, a port in one data set omitted accents while the other did not). 
+mex_ports_dictionary.csv was created to find the overlap of ports between these two files. This file connected the ports that contained the same or very similar names (ex, a port in one data set omitted accents while the other did not). 
 
 
 ### Column specifications
 
-- municipality_id: numeric. 5-digit numeric code that acts as a unique identifier for each 
-- municipality. 
+- municipality_id: numeric. 5-digit numeric code that acts as a unique identifier for each municipality. 
 - municipality_name: text. Official name of municipality. 
 - port_id: numeric. 5-digit numeric code that acts as a unique identifier for each port. 
 - port_name: text. Official name of port. Originally labeled under ‘Nombre del Puerto’.
