--- a/README.Rmd
+++ b/README.Rmd
@@ -53,7 +53,7 @@ ggplot(data = mex) +
 
 This repository is still in development. It will contain data and code to a geospatial dataset of the major ports of Mexico. It is intended to interface with other data in [mex_fisheries](https://github.com/jcvdav/mex_fisheries), such as vessel- and port-level landings information.
 
-There are __ ports in the final data. 154 individual ports are identified in mexican_ports.csv, 4 of which are on lakes and therefore are NOT coastline ports. 
+There are __ ports in the final data. 154 individual ports are identified in mexican_ports.csv, 4 of which are on lakes and therefore are not coastline ports. 
 51 of the total ports in mexican_ports.csv can be matched to ports in mex_large_scale_landing_ports.csv, which is reflected in the mex_ports_dictionary.csv file. 17 ports found in mex_large_scale_landing_ports.csv cannot be accurately matched to mexican_ports.csv obtained from catastro.pdf.
 Lake ports, ports without a matching port in both files, and repeats are filtered out in 03_combine_sources.R.
 
