--- a/README.Rmd
+++ b/README.Rmd
@@ -104,3 +104,57 @@ The data are available in three formats:
 
 ## Using the data
 
+### Build a table of landing sites an d corodinates
+
+```{r}
+#Load packages
+
+library(tidyverse)
+# Load the data using the csv file
+mex_ports <- read_csv(
+  file = "https://github.com/mex-fisheries/mex_ports/raw/refs/heads/main/data/clean/mex_ports.csv") # You can read the rds file using read_RDS(url("url/to/file.rds"))
+
+# A quick glimpse at the data
+glimpse(mex_ports)
+
+# Let's get all ports that can be matched to landing site from CONAPESCA's data
+mex_ports |> 
+  filter(!is.na(landing_site_id)) |> 
+  select(port_name, landing_site_id, longitude, latitude)
+```
+
+### Build a map
+
+The code below is used to build the figure at the top of this document.
+
+```{r, eval=FALSE}
+# Load packages
+library(rnaturalearth)
+library(sf)
+library(tidyverse)
+
+# This time we read the geopackage
+mex_ports_sf <- st_read("https://github.com/mex-fisheries/mex_ports/raw/refs/heads/main/data/clean/mex_ports.gpkg",
+                        quiet = TRUE)
+
+mex <- ne_countries(country = "Mexico")
+
+ggplot(data = mex) +
+  geom_sf() +
+  geom_sf(data = mex_ports_sf,
+          mapping = aes(fill = !is.na(landing_site_id)),
+          color = "black",
+          shape = 21,
+          size = 2,
+          alpha = 0.7) +
+  theme_minimal() +
+  theme(legend.position = "inside",
+        legend.position.inside = c(0.1, 0.2)) +
+  scale_fill_brewer(palette = "Set1") +
+  labs(title = "Mexican Ports",
+       subtitle = "Colors indicate whether the port was matched to a CONAPESCA landing site",
+       x = "Longitude",
+       y = "Latitude",
+       fill = "Matched")
+```
+
